[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/wardrobe_scene.gd" id="1"]

[node name="WardrobeScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
color = Color(0.0901961, 0.109804, 0.156863, 1)
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HUDContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
offset_bottom = 170.0

[node name="HUDPanel" type="PanelContainer" parent="HUDContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="HUDContainer/HUDPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WaveValue" type="Label" parent="HUDContainer/HUDPanel/VBox"]
unique_name_in_owner = true
text = "Wave: -"

[node name="TimeValue" type="Label" parent="HUDContainer/HUDPanel/VBox"]
unique_name_in_owner = true
text = "Time: -"

[node name="MoneyValue" type="Label" parent="HUDContainer/HUDPanel/VBox"]
unique_name_in_owner = true
text = "Money: -"

[node name="MagicValue" type="Label" parent="HUDContainer/HUDPanel/VBox"]
unique_name_in_owner = true
text = "Magic: -"

[node name="DebtValue" type="Label" parent="HUDContainer/HUDPanel/VBox"]
unique_name_in_owner = true
text = "Debt: -"

[node name="EndShiftButton" type="Button" parent="HUDContainer/HUDPanel/VBox"]
unique_name_in_owner = true
text = "End Shift (debug)"
